--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -1,3 +1,4 @@
 SHOPIFY_STORE_URL=https://your-shop-name.myshopify.com
 SHOPIFY_ACCESS_TOKEN=your-shopify-access-token
+SHOPIFY_API_VERSION=2024-10
 PORT=3000
