authetication layer added both front & backend

--- a/back-end/.env.example
+++ b/back-end/.env.example
@@ -2,3 +2,4 @@ SHOPIFY_STORE_URL=https://your-shop-name.myshopify.com
 SHOPIFY_ACCESS_TOKEN=your-shopify-access-token
 SHOPIFY_API_VERSION=2024-10
 PORT=3000
+FRONTEND_API_KEY=your-frontend-api-key
